update to include wav and fix requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 numpy
 matplotlib==2.0.2
 py_midi
-genism==3.6
+gensim==3.6
 pretty_midi
-tensorflow-gpu==1.14.0
+tensorflow==1.1.0
 sklearn
 pandas
+scipy
